Archive2/00/187edfee404b5c/output
main.cpp:4:1: error: stray '\303' in program
 público:     
 ^
main.cpp:4:1: error: stray '\272' in program
main.cpp:4:1: error: 'p' does not name a type
main.cpp: In constructor 'A::A(int, int)':
main.cpp:10:7: error: 'aver' was not declared in this scope
       aver edad = (num 1 + nu m2) / 2; 
       ^
main.cpp: In function 'int main()':
main.cpp:18:4: error: 'clase' was not declared in this scope
    clase A a; 
    ^
